Fix no wrap answer item

--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -484,6 +484,7 @@ div.answer label.btn-answer{
   margin: 10px 0;
   line-height: 30px;
   font-weight: normal;
+  white-space: normal;
 }
 
 div.answer label.btn-answer:hover{
